--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "ava": "~0.0.4",
+    "mocha": "~2.1.0",
     "for-in": "~0.1.3",
     "istanbul-harmony": "~0.3.1"
   }
